# grove

./: .gitignore  README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json
package/: .gitignore  .npmignore  README.md  index.ts  package-lock.json  package.json
package/parser/: .gitignore  .npmignore  README.md  package-lock.json  package.json
package/parser/sitters/java/: grammar.d.ts
package/parser/sitters/php/: grammar.d.ts.map
package/parser/sitters/php/script/: parse-examples.d.ts.map
parser/: Cargo.toml  build.rs
parser/sitters/dart/: index.d.ts
parser/sitters/php/script/: parse-examples.d.ts
parser/src/: lib.rs
playground/: .gitignore  package.json  tailwind.config.js  vercel.json
playground/pages/: _app.tsx  index.tsx
playground/styles/: globals.css
tests/: parsing.test.ts
