[package]
name = "parser"
version = "0.1.0"
authors = ["Mintlify"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.2"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20.0"
tree-sitter-python = "0.19.1"
tree-sitter-kotlin = "0.2.11"
tree-sitter-c = "0.20.1"
tree-sitter-cpp = "0.20.0"
tree-sitter-rust = "0.20.1"
tree-sitter-go = "0.19.1"
serde = "1.0.133"
serde_json = "1.0.74"
serde_derive = "1.0.133"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]

[build-dependencies]
cc="*"